--- a/퀵정렬이란?.md
+++ b/퀵정렬이란?.md
@@ -77,4 +77,45 @@
     0 1 2 3 4 5 6 7 8 9
 
 ## 코드(JS)
-![quickSort](QuickImg/quickSort.png)
+```javascript
+let array = [5, 7, 9, 0, 3, 1, 6, 2, 4, 8];
+
+quickSort(array, 0, array.length-1);
+console.log(array.join(' '))
+
+function quickSort(array, start, end){
+    
+    if(start >= end){ // 원소가 1개인 경우 종료
+        return;
+    } 
+    let pivot = start; 
+    let left = start+1; 
+    let right = end;
+
+    while(left<=right){
+        while(left<=end && array[left] <= array[pivot]){
+            // pivot 기준 왼쪽은 pivot 보다 큰 수를 선택함.
+            left += 1; 
+            }
+        while(right>start && array[right] >= array[pivot]){
+                // pivot 기준 오른쪽은 pivot보다 작은 수를 선택함
+                right -=1;
+        }
+
+        if(left>right){
+            // 엇갈렸다면, 작은 값과 pivot 값 교환
+            [array[pivot], array[right]] = [array[right], array[pivot]];
+        }
+        else{
+            // 그렇지 않다면, left와 right 값 교환
+            [array[left], array[right]] = [array[right], array[left]]
+        }
+        
+    }
+    // 분할 이후 왼쪽 부분과 오른 쪽 부분 각각 정렬 수행
+    quickSort(array, start, right-1);
+    quickSort(array, right+1, end);
+
+}
+
+```
